Fix edge detail not truncating

--- a/web/war/src/main/webapp/less/detail/detail.less
+++ b/web/war/src/main/webapp/less/detail/detail.less
@@ -216,6 +216,11 @@
   .vertex-to-vertex-relationship {
     font-size: 90%;   
     line-height: 1.1em;    
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+    padding: 0 1em;
+    .box-sizing(border-box);
     
     &:hover {          
       text-decoration: none;
